<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.WrongLogin">


    <TextView
        android:id="@+id/welcome_"
        android:layout_width="312dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/welcome_"
        android:textAppearance="@style/welcome_"
        android:textStyle="bold"
       app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_to_"
        android:layout_width="247dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/sign_in_to_"
        android:textAppearance="@style/sign_in_to_"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="77dp"
        android:layout_height="59dp"
        android:layout_marginTop="72dp"
        android:clipToOutline="true"
        android:paddingStart="5dp"
        android:paddingLeft="10dp"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_to_" />

    <TextView
        android:id="@+id/sunday_gide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/sunday_gide"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />


    <TextView
        android:id="@+id/regNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="AK19/PHS/CSC/052"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunday_gide" />


    <TextView
        android:id="@+id/accessCodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/access_code"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunday_gide" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="333dp"
        android:layout_height="42dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:drawablePadding="10dp"
        android:hint="       1234567   "
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessCodes"

        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/clickHereTOData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="left"
        android:lineSpacingExtra="1sp"
        android:text="@string/incorrect_d"
        android:textColor="@color/orange"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/backbutton"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />










</androidx.constraintlayout.widget.ConstraintLayout>