<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/create_an_a"
        android:textAppearance="@style/create_an_a"
        android:textStyle="bold"
       app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_to"
        android:layout_width="295dp"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:layout_marginRight="80dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/register_to"
        android:textAppearance="@style/register_to"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_an_a"

        />

    <TextView
        android:id="@+id/email_phone"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/email_addre"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_to" />

    <EditText
        android:id="@+id/editAccessCode"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint="@string/enter_your_"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_phone" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/phone_numbe"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAccessCode" />

    <EditText
        android:id="@+id/enterPhoneNumber"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint=" Enter your Phone Number"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

    <TextView
        android:id="@+id/access_code"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/access_code_txt"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterPhoneNumber" />

    <EditText
        android:id="@+id/enterAccessCode"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint=" Enter your Access Code"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/access_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/confirmAccessCode"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="1sp"
        android:layout_marginTop="10dp"
        android:text="Confirm Access Code"
        app:layout_constraintTop_toBottomOf="@id/enterAccessCode"
        android:textAppearance="@style/email_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/enterConfirmAccessCode"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/ic_outline_account_circle_24"
        android:drawablePadding="5dp"
        android:hint=" Confirm your Access Code"
        android:paddingStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/confirmAccessCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/backbutton"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/continue_txt"
        android:textAppearance="@style/continue_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterConfirmAccessCode" />

    <!--    <TextView-->
    <!--        android:id="@+id/don_t_have_1"-->
    <!--        android:layout_width="319dp"-->
    <!--        android:layout_height="39dp"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        android:gravity="center_horizontal|center_vertical"-->
    <!--        android:lineSpacingExtra="-1sp"-->
    <!--        android:text="@string/don_t_have_t"-->
    <!--        android:textAppearance="@style/don_t_have_a"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.586"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/con" />-->


    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="319dp"
        android:layout_height="39dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-1sp"
        android:text="Already have an account ?"
        android:textAppearance="@style/don_t_have_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alreadyHaveLogin"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginRight="84dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="-1sp"
        android:text="LOGIN "
        android:textAppearance="@style/don_t_have_a"
        android:textColor="#027426"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/continue_btn"
        />



</androidx.constraintlayout.widget.ConstraintLayout>